--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.5.1
 beautifulsoup4==4.11.1
 certifi==2021.10.8
 cffi==1.15.0
+requests==2.28.1
 charset-normalizer==2.0.12
 cloudinary==1.29.0
 coreapi==2.3.3
